# ipyanimlab

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml
docs/: api.rst  conf.py  index.rst  requirements.txt  usage.rst
docs/examples/: 01_simple_sphere.nblink  02_rigid_usd.nblink  03_character_usd.nblink  04_animation.nblink  05_multiple_character.nblink  06_fbx_character.nblink  10_time_of_day.nblink  11_edit_material.nblink  index.rst
examples/: add_bone.ipynb  character_fbx.ipynb
src/ipyanimlab/: __init__.py  animation.py  asset.py  bvh.py  fbxreader.py  procedural_asset.py  timeline.py  utils.py  viewer.py
src/ipyanimlab/assets/: AnimLabSimpleMale.fbx  AnimLabSimpleMale.usd  ShaderBall.usd  __init__.py  cube.usd  sphere.usd
src/ipyanimlab/render/: axis.py  background.py  frustum.py  gbuffer.py  ground.py  line.py  material.py  mesh.py  mesh_render.py  screen_vbo.py  shadow.py  show_texture.py  sky.py  ssao.py
src/ipyanimlab/usd/: import_animation.py  import_asset.py  material_prim.py  reading_accessors.py  reading_buffers.py  reading_mesh.py  rigid_asset.py  skeleton_prim.py  skinned_asset.py
