[build-system]
requires = [
	"hatchling>=1.3.1"
]
build-backend = "hatchling.build"

[project]
name = "ipyanimlab"
description = "An Animation R&D jupyter Lab, build on top of ipywebgl"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
authors = [
    { name = "Jerome Eippers", email = "jerome@eippers.be" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
	"WebGl"
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy",
	"ipywebgl",
	"usd-core"
]
version = "1.1.1"

[project.urls]
Homepage = "https://github.com/JeromeEippers/ipyanimlab"
Documentation = "https://ipyanimlab.readthedocs.io/en/latest/index.html"
